# depot

./: .gitmodules  index.html  params.json  readme.md
C.Paketo/: .gitignore  build.sh  libpkto.doxygen  premake4.lua  readme.md
C.Paketo/doc/: design.md
C.Pio/: build.sh  premake4.lua  readme.md
C.Uts/: Makefile  premake4.lua  readme.md
Cpp.BoardGame/: BoardGame.kdev4  CMakeLists.txt  readme.md
Cpp.BoardGame/core/: CMakeLists.txt
Cpp.BoardGame/core/include/: Board.h  Exception.h  Game.h  Player.h  Token.h
Cpp.BoardGame/core/src/: Board.cpp  Game.cpp  Player.cpp  Token.cpp
Cpp.BoardGame/doc/: protocol.tex  rules-de.tex
Cpp.BoardGame/gui/: CMakeLists.txt
Cpp.BoardGame/gui/src/: BoardScene.cpp  BoardScene.hpp  GraphicsTokenItem.cpp  GraphicsTokenItem.hpp  GuiPlayer.cpp  GuiPlayer.hpp  MainWindow.cpp  MainWindow.hpp  NewGameDialog.cpp  NewGameDialog.hpp  Resource.qrc  TokenWidget.cpp  TokenWidget.hpp  main.cpp
Cpp.BoardGame/gui/src/ui/: MainWindow.ui  NewGameDialog.ui  TokenWidget.ui
Cpp.Editor/: .gitignore  CMakeLists.txt  Cpp.Editor.kdev4  readme.md
Cpp.Editor/include/editor/: EditorWidget.hpp  Lua.hpp  MainWindow.hpp
Cpp.Editor/src/: EditorWidget.cpp  Lua.cpp  MainWindow.cpp  main.cpp
Cpp.Editor/ui/: MainWindow.ui
Cpp.LoginMng/: CMakeLists.txt  build.sh  readme.md
Cpp.LoginMng/liblmng/: CMakeLists.txt
Cpp.LoginMng/liblmng/include/lmng/: LoginMng.hpp  Process.hpp
Cpp.LoginMng/liblmng/src/: Process.cpp
Cpp.LoginMng/nlogin/: CMakeLists.txt
Cpp.LoginMng/nlogin/src/: App.cpp  App.hpp  LoginWindow.cpp  LoginWindow.hpp  main.cpp
Cpp.PaintPresenter/: .gitignore  presentation_paint.pro  readme.md  resources.qrc
Cpp.PaintPresenter/qml/: MainWindow.js  MainWindow.qml  PresentationWindow.qml  PresenterWidget.qml  TimerWidget.qml
Cpp.PaintPresenter/src/: Helper.hpp  MainWindow.cpp  MainWindow.hpp  PaintTool.cpp  PaintTool.hpp  PaintWidget.cpp  PaintWidget.hpp  PdfView.cpp  PdfView.hpp  PresentationDialog.cpp  PresentationDialog.hpp  PresentationViewer.cpp  PresentationViewer.hpp  View.cpp  View.hpp  ViewListModel.cpp  ViewListModel.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintwidget.cpp  paintwidget.h
Cpp.RunnerGame/: CMakeLists.txt  build.sh  readme.md
Cpp.RunnerGame/data/: scroller_parallax.xcf
Cpp.RunnerGame/src/: Background.cpp  Background.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  Player.cpp  Player.hpp  main.cpp
Cpp.ShellNG/: .gitignore  CMakeLists.txt  build.sh  build_tests.sh  readme.md
Cpp.ShellNG/docs/: syntax.md
Cpp.ShellNG/libshellng/: CMakeLists.txt
Cpp.ShellNG/libshellng/include/shellng/: Api.h  Ast.hpp  Buffer.hpp  Context.hpp  Exception.hpp  Interpreter.hpp  Job.hpp  Lexer.hpp  Parser.hpp  Shell.hpp  Source.hpp  String.hpp  Token.hpp  Types.hpp
Cpp.ShellNG/libshellng/src/: Buffer.cpp  Lexer.cpp  Lexer.re  ParseContext.hpp  Parser.cpp  Parser.yy  Shell.cpp  Source.cpp  String.cpp
Cpp.ShellNG/shellng/: CMakeLists.txt
Cpp.ShellNG/shellng/src/: LineSource.cpp  LineSource.hpp  main.cpp
Cpp.ShellNG/tests/: example1.sh
Cpp.SoundProgramming/: daw_daemon_design.md
Cpp.SoundProgramming/alsa_snippets/: .gitignore  CMakeLists.txt
Cpp.SoundProgramming/alsa_snippets/src/: alsa_libsndfile_record.c  alsa_list.c  alsa_play.c  alsa_record.c  portaudio_libsndfile_play.c
Cpp.SoundProgramming/mpt/: CMakeLists.txt  build.sh  readme.md
Cpp.VocabTrainer/: CMakeLists.txt  Cpp.VocabTrainer.kdev4  readme.md
Cpp.VocabTrainer/src/: Application.cpp  Application.hpp  Database.cpp  Database.hpp  MainWindow.cpp  MainWindow.hpp  VocableDisplay.cpp  VocableDisplay.hpp  defaultResource.qrc  main.cpp
Cpp.VocabTrainer/src/core/: Deck.cpp  Deck.hpp
Cpp.VocabTrainer/src/ui/: MainWindow.ui  VocableDisplay.ui
Go.HttpAppServer/: build.sh  readme.md
Go.HttpAppServer/src/: fsstorage.go  main.go
JS.BoardGameWeb/client/: index.html  readme.md
JS.BoardGameWeb/server/: main.js  readme.md
JS.KanaTrainer/: index.html  readme.md
JS.KanaTrainer/js/: KanaData.js  KanaTrainer.js  Paint.js  setup.js
JS.KanaTrainer/style/: default.css
JS.Wiki/: .gitignore  build.cmd  build.sh  main.js  readme.md
JS.Wiki/server/: server.go
JS.Wiki/srv/: server.js
JS.Wiki/web/: index.html
Js.Pw/: console.js  index.html
Js.Pw/js/: webapp.js
Mix.InformationManager/: readme.md
Mix.PersonalWiki/: readme.md
Mix.PersonalWiki/frontend/: httpserver.js  index.htm  readme.md
Python.Scripts/: youtube_playlist.py
Rust.AntSimulator/: build.sh  readme.md  shellng
Rust.ConfHelper/: Cargo.toml  readme.md
Rust.ConfHelper/src/: main.rs
Rust.MiniAsm/: .gitignore  build.sh  readme.md
Rust.MiniAsm/doc/: instructions.md  lesson01.md
Rust.MiniAsm/tests/: basic.miasm  hello_world.miasm  simple01.miasm
Rust.ShellNG/: .gitignore  Cargo.toml  build.sh  readme.md  run_tests.sh
Rust.ShellNG/examples/: overview.shng
Rust.ShellNG/libshellng/: Cargo.toml
Rust.ShellNG/rustnoise/: Cargo.toml  build.rs  build.sh
Rust.ShellNG/shellng/: main.rs
Rust.SphereGen/: .gitignore  Cargo.toml  plot.gnuplot  spheregen.config.toml
Rust.SphereGen/src/: main.rs
Shell.Scripts/: CreateHomeDirectories.sh  record.sh
Txt.BoardGame/: .gitignore  LICENSE
Txt.BoardGame/rules/: .gitignore  build.sh  rules.de.html  rules.de.tex
Txt.BoardGame/tools/: .gitignore  compileCommands.py  create_overview_pdfs.sh  create_pdf.sh  create_sv.sh  create_svg.sh  genLibrary.py  genOverView.py  genSingleView.py  gentokensvg.py  merge_svg.py  readme.md  tokendb.txt
Txt.PPRPG/: readme.md
Txt.PPRPG/db/: magic_skills.toml
Txt.PPRPG/rules/: rules.fantasy.de.md  rules.short.de.md  skills.fantasy.de.md
Txt.PPRPG/simu/: character.py  main.py
Vala.Terminal/: .gitignore  PKGBUILD  build.sh  readme.md  vaterm.conf  vaterm.css  vte3.vapi  vterm.css
Vala.Terminal/src/: TerminalApplication.vala  TerminalMenu.vala  TerminalWindow.vala  Utils.vala  main.vala
Vala.pdfpres2/: .gitignore  build.sh  poppler-glib3.vapi
Vala.pdfpres2/src/: MainWindow.vala  Presentation.vala  PresenterWindow.vala
kanatrainer/: index.html  readme.md
pw/: index.html
(+151 files in other folders)
